@@ -49,6 +49,7 @@
 	- fix: avoid db problems with self-obsoleting packages on install.
 	- glibc2: always enable dynamic mtrace if available.
 	- fix: versioned provides devolved to existence test with conflicts.
+	- fix: with unspecified epochs, skip dependency epoch compare.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
